--- a/selenium.nuspec
+++ b/selenium.nuspec
@@ -12,7 +12,7 @@
       Temp desc
     </description>
     <dependencies>
-        <dependency id="nssm" version="2.24-101-g897c7ad" />
+        <dependency id="nssm" version="2.24-101-*" />
     </dependencies>
   </metadata>
   <files>
