--- a/selenium.nuspec
+++ b/selenium.nuspec
@@ -12,7 +12,7 @@
       Temp desc
     </description>
     <dependencies>
-        <dependency id="nssm" version="pre" />
+        <dependency id="nssm" version="--pre" />
     </dependencies>
   </metadata>
   <files>
