--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 install:
   - set PATH=C:\Ruby23\bin;%PATH%
   - bundle install
-  - choco install firefox --version 46.0.1
   - choco install -y nssm --pre
-  - choco install -y selenium --params "'/role:hub /service /autostart /port:4446'"
+  - choco pack
+  - choco install -y selenium --params "'/role:hub /service /autostart /port:4446'" -s .
 
 build: off
 
