--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ install:
   - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /service /autostart /port:4446'" -s .
+  - choco install -y googlechrome selenium-chrome-driver
+  - choco install -y selenium --params "'/role:node /hub:http://localhost:4446 /port:5557 /capabilitiesJson:$capabilitiesJson /autostart'"
 
 build: off
 
@@ -12,6 +14,7 @@ before_test:
   - ruby -v
   - gem -v
   - bundle -v
+  - START /B C:\tools\selenium\node.bat
 
 test_script:
   - bundle exec rake
