Clean up serverspec lnk paths

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ install:
   - choco install -y selenium --params "'/role:hub /service /autostart /port:4446'" -d -s .
   - choco install -y googlechrome selenium-chrome-driver
   - choco install -y selenium --params "'/role:node /hub:http://localhost:4446 /port:5557 /autostart'" -d -s . --force
-  - ps: $MyProcess = Start-Process C:\tools\selenium\node.cmd -PassThru
+  - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
+
 build: off
 
 before_test:
