Add firewall rule info

--- a/selenium.nuspec
+++ b/selenium.nuspec
@@ -14,13 +14,17 @@ Installs and configures selenium standalone, hub, or node server.
 The selenium-server-*.jar, *capabilites.json, *config.json, and *.cmd
 files are located in `<Get-ToolsLocation>/selenium` directory.
 
+A firewall rule is automatically created to allow traffic to server
+port.
+
 Windows service is available for all roles but unless you are testing
 with headless browsers, it is only recommended for hub role.  The
 non-Windows service requires logon, but it allows selenium access to
 drive the GUI browser. See AutoLogon section below for information on
 how to configure Windows to logon automatically.
 
-See https://github.com/dhoer/choco-selenium#selenium for more information about usage.
+See https://github.com/dhoer/choco-selenium#selenium for more
+information about usage.
     </description>
   </metadata>
   <files>
