--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ install:
   - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /service /autostart /port:4446'" -d -s .
-  - choco install -y googlechrome selenium-chrome-driver
+  - choco install -y firefoxesr selenium-gecko-driver
   - choco install -y selenium --params "'/role:node /hub:http://localhost:4446 /port:5557 /autostart'" -d -s . --force
   - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
 
