Fix nuspec xml parsing issue

--- a/selenium.nuspec
+++ b/selenium.nuspec
@@ -13,7 +13,7 @@ Installs and configures selenium standalone, hub, or node server
 from https://github.com/SeleniumHQ/selenium/.
 
 The selenium-server-*.jar, *capabilites.json, *config.json, and *.cmd
-files are located in `<Get-ToolsLocation>/selenium` directory.
+files are located in `&lt;Get-ToolsLocation&gt;/selenium` directory.
 
 A firewall rule is automatically created to allow traffic to server
 port.
