--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,9 +6,9 @@ install:
   - choco install chocolatey-core.extension
   - choco install -y nssm --pre
   - choco pack
-  - choco install -y selenium --params "'/role:hub /service /autostart /port:4446'" -d -s .
+  - choco install -y selenium --params "'/role:hub /service /port:4446 /autostart /log'" -d -s .
   - choco install -y firefoxesr selenium-gecko-driver
-  - choco install -y selenium --params "'/role:node /hub:http://localhost:4446 /port:5557 /autostart'" -d -s . --force
+  - choco install -y selenium --params "'/role:node /hub:http://localhost:4446 /port:5557 /autostart /log'" -d -s . --force
   - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
 
 build: off
