--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ test_script:
   - bundle exec rake
   - mvn clean test -Dtest="ChromeTest,FirefoxTest,IETest"
 
-on_failure:
+on_finish:
   - type C:\tools\selenium\hub.log
   - type C:\tools\selenium\node.log
 
