--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: '{branch}-{build}'
 
 install:
-  - set PATH=C:\Ruby30\bin;%PATH%
+  # - set PATH=C:\Ruby31-x64\bin;%PATH%
   - bundle install
   - choco install chocolatey-core.extension
   - choco install -y nssm --pre
