--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ image: Visual Studio 2019
 install:
   # - set PATH=C:\Ruby31-x64\bin;%PATH%
   - bundle install
-  - choco install chocolatey-core.extension
+  # - choco install chocolatey-core.extension
   - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /config:.\config-hub.toml /service /autostart'" -d -s . --force --debug
