--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,12 +6,13 @@ install:
   # - set PATH=C:\Ruby31-x64\bin;%PATH%
   - bundle install
   # - choco install chocolatey-core.extension
-  - choco install -y nssm --pre
+  # - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /config:.\config-hub.toml /service /autostart'" -d -s . --force --debug
   - choco install -y googlechrome --ignorechecksum
   - choco install -y firefoxesr selenium-gecko-driver selenium-chrome-driver selenium-ie-driver
   - choco install -y selenium --params "'/role:node /config:.\config-node.toml /autostart'" -d -s . --force --debug
+  - ps: Start-Service -Name "Selenium Hub"
   - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
 
 build: false
