test firefox only

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,10 @@ install:
   # - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /config:.\config-hub.toml /service /autostart'" -d -s . --force --debug
-  - choco install -y googlechrome --ignorechecksum
-  - choco install -y firefoxesr selenium-gecko-driver selenium-chrome-driver selenium-ie-driver
+  # - choco install -y googlechrome --ignorechecksum
+  - choco install -y firefoxesr selenium-gecko-driver 
+  # - choco install -y selenium-chrome-driver 
+  # - choco install -y selenium-ie-driver
   - choco install -y selenium --params "'/role:node /config:.\config-node.toml /autostart'" -d -s . --force --debug
   - ps: Start-Service -Name "Selenium Hub"
   - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
@@ -23,8 +25,9 @@ before_test:
   - bundle -v
 
 test_script:
-  - bundle exec rake
-  - mvn clean test -Dtest="ChromeTest,FirefoxTest,IETest"
+  # - bundle exec rake
+  # - mvn clean test -Dtest="ChromeTest,FirefoxTest,IETest"
+  - mvn clean test -Dtest="FirefoxTest"
 
 on_finish:
   - type C:\tools\selenium\hub.log
