--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ install:
   # - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /config:.\config-hub.toml /service /autostart'" -d -s . --force --debug
-  - ps: Start-Service -Name "Selenium Hub"
+  - sc start "Selenium Hub"
+  # - ps: Start-Service -Name "Selenium Hub"
   # - choco install -y googlechrome --ignorechecksum
   - choco install -y firefoxesr selenium-gecko-driver 
   # - choco install -y selenium-chrome-driver 
