--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ install:
   # - choco install -y nssm --pre
   - choco pack
   - choco install -y selenium --params "'/role:hub /config:.\config-hub.toml /service /autostart'" -d -s . --force --debug
-  - sc start "Selenium Hub"
+
+  # - sc start "Selenium Hub"
   # - ps: Start-Service -Name "Selenium Hub"
   # - choco install -y googlechrome --ignorechecksum
   - choco install -y firefoxesr selenium-gecko-driver 
@@ -17,7 +18,9 @@ install:
   # - choco install -y selenium-ie-driver
   - choco install -y selenium --params "'/role:node /config:.\config-node.toml /autostart'" -d -s . --force --debug
 
-  - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
+  # - ps: Start-Process C:\tools\selenium\node.cmd -PassThru
+  - ps: Restart-Computer -Force      # here the server goes restarting
+  - ps: Start-Sleep -s 10
 
 build: false
 
